--- a/attachments/NSI/TravailPourLe24012021/liens/solution.html
+++ b/attachments/NSI/TravailPourLe24012021/liens/solution.html
@@ -20,7 +20,7 @@
 		<p class="presp"> &#60;form&#62; </p>
 		<p><strong><u>Question 2:</u></strong> Quelle méthode d'envoie des paramètres est t-il préférable d'utilisé, pour un formulaire d'une page web, destiné à demander à l'utilisateur un mot de passe pour se connecter.</p>
 		<p class="presp">POST</p>
-		<a href="index.html"><button>Revenir au Tutoriel</button></a>
+		<a href="../index.html"><button>Revenir au Tutoriel</button></a>
 	</body>
 </html>
 
